# glad

./: CMakeLists.txt
include/glad/: gl.h  gles2.h  glx.h  wgl.h
src/: gl.c  gles2.c  glx.c  wgl.c
